# construire-et-tester-infrastructure-donnees

./: .gitignore  Dockerfile  README.md  Support de presentation.pptx  data_accessibility.py  docker-compose.yml  insert_data.py  pyproject.toml  transform_data.py
tests/: test_integrity.py  test_replication.py
