[tool.poetry]
name = "p8 - construire et tester une infrastructure de données"
version = "0.1.0"
description = ""
authors = ["Maeva Beauvillain <m.berte@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
boto3 = "^1.37.0"
pymongo = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
